--- a/index.html
+++ b/index.html
@@ -22,31 +22,40 @@
             class="img"
             src="./img/photo.jpg"
             alt="photo"
-            width="200"
-            height="200"
+            width="250"
+            height="250"
           />
           <h2>Contact Me</h2>
           <ul class="contact-list">
-            <li>
-              <a href="tel:+380660097267">
+            <li class="contact-item">
+              <a
+                class="link-contact-item"
+                href="tel:+380660097267"
+                target="_blank"
+              >
                 <svg class="" width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-phone"></use>
                 </svg>
                 +38 066 009 72 67
               </a>
             </li>
-            <li>
-              <a class="" href="mailto:kalinichenko.as@ukr.net">
+            <li class="contact-item">
+              <a
+                class="link-contact-item"
+                href="mailto:kalinichenko.as@ukr.net"
+                target="_blank"
+              >
                 <svg class="" width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-mail"></use>
                 </svg>
                 kalinichenko.as@ukr.net
               </a>
             </li>
-            <li>
+            <li class="contact-item">
               <a
-                class=""
+                class="link-contact-item"
                 href="https://www.linkedin.com/in/artem-kalinichenko-38b30926a/"
+                target="_blank"
               >
                 <svg class="" width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-linkedin"></use>
@@ -54,61 +63,184 @@
                 Linkedin
               </a>
             </li>
-            <li>
-              <a class="" href="https://github.com/KalinichenkoArtem">
+            <li class="contact-item">
+              <a
+                class="link-contact-item"
+                href="https://github.com/KalinichenkoArtem"
+                target="_blank"
+              >
                 <svg class="" width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-github"></use>
                 </svg>
                 GitHub
               </a>
             </li>
-            <li>
-              <a class="" href="https://t.me/kalinichenkoas">
+            <li class="contact-item">
+              <a
+                class="link-contact-item"
+                href="https://t.me/kalinichenkoas"
+                target="_blank"
+              >
                 <svg class="" width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-telegram"></use>
                 </svg>
                 @kalinichenkoas
               </a>
             </li>
+            <li class="contact-item">
+              <a
+                class="link-contact-item"
+                href="https://goo.gl/maps/cQTE5kkfVRGKGfZq8"
+                target="_blank"
+              >
+                <svg class="" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-location"></use>
+                </svg>
+                Dnipro, Ukraine
+              </a>
+            </li>
           </ul>
           <h2>Tech Skills</h2>
-          <ul>
-            <li>HTML5</li>
-            <li>CSS3</li>
-            <li>Sass</li>
-            <li>JavaScript</li>
-            <li>Node.js</li>
-            <li>React</li>
+          <ul class="tech-skills-list">
+            <li class="tech-skills-item">HTML5/CSS3/SASS</li>
+            <li class="tech-skills-item">Responsive/Adaptive design</li>
+            <li class="tech-skills-item">GIT</li>
+            <li class="tech-skills-item">JavaScript</li>
+            <li class="tech-skills-item">Parcel/Node.js</li>
+            <li class="tech-skills-item">React</li>
           </ul>
           <h2>Soft Skills</h2>
-          <ul>
-            <li>Team Work</li>
-            <li>Time Management</li>
-            <li>Adaptability/Flexibility</li>
-            <li>Communicative</li>
-            <li>Personal effectiveness</li>
+          <ul class="soft-skills-list">
+            <li class="soft-skills-item">Team Work</li>
+            <li class="soft-skills-item">Time management</li>
+            <li class="soft-skills-item">Quick learning</li>
+            <li class="soft-skills-item">Initiative</li>
+            <li class="soft-skills-item">Personal effectiveness</li>
           </ul>
           <h2>Languages</h2>
-          <ul>
-            <li>English - pre-intermediate</li>
-            <li>Ukrainian - native</li>
+          <ul class="languages-list">
+            <li class="languages-item">Ukrainian - native</li>
+            <li class="languages-item">English - pre-intermediate</li>
           </ul>
         </section>
         <section class="right-section">
-          <p class="name">Artem Kalinichenko</p>
-          <p>Junior Frontend Developer</p>
-          <p>Summary</p>
+          <p class="name">ARTEM KALINICHENKO</p>
+          <p class="desc">Junior Frontend Developer</p>
+          <h2>Summary</h2>
+          <p class="summary-text">
+            Summary..Summary..Summary..Summary..Summary..
+            Summary..Summary..Summary..Summary..Summary..
+            Summary..Summary..Summary..Summary..Summary..
+            Summary..Summary..Summary..Summary..Summary..
+            Summary..Summary..Summary..Summary..Summary..
+          </p>
           <h2>Project Experience</h2>
-          <ul>
-            <li>IceCream</li>
-            <li>News</li>
-            <li>React Project</li>
+          <ul class="project-experience-list">
+            <li class="project-experience-item">
+              <a
+                class="project-link"
+                href="https://kalinichenkoartem.github.io/goit-markup-hw-08/"
+                target="_blank"
+                >WebStudio
+              </a>
+              <a
+                class="project-link"
+                href="https://github.com/KalinichenkoArtem/goit-markup-hw-08"
+                target="_blank"
+                ><span>|</span> GitHub-repository</a
+              >
+              <span> [HTML, SASS, JavaScript, Parcel]</span>
+              <p>
+                A website of WebStudio company. Responsive design, transform
+                effects, modal window.
+              </p>
+              <p>Role: developer.</p>
+              <p>Individual project.</p>
+            </li>
+            <li class="project-experience-item">
+              <a
+                class="project-link"
+                href="https://staloneserhii.github.io/ice-cream/"
+                target="_blank"
+                >IceCream
+              </a>
+              <a
+                class="project-link"
+                href="https://github.com/StaloneSerhii/ice-cream"
+                target="_blank"
+                >| GitHub-repository</a
+              >
+              <span> [HTML, SASS, JavaScript, Parcel]</span>
+              <p>
+                IceCream company website with responsive layout, burger menu,
+                modal window and attractive design.
+              </p>
+              <p>Role: developer.</p>
+              <p>Team project.</p>
+            </li>
+            <li class="project-experience-item">
+              <a
+                class="project-link"
+                href="https://yaroslavrebrina.github.io/js-project/"
+                target="_blank"
+                >News
+              </a>
+              <a
+                class="project-link"
+                href="https://github.com/YaroslavRebrina/js-project"
+                target="_blank"
+                >| GitHub-repository</a
+              >
+              <span> [HTML, SASS, JavaScript, Node.js]</span>
+              <p>
+                IceCream company website with responsive layout, burger menu,
+                modal window and attractive design.
+              </p>
+              <p>Role: developer.</p>
+              <p>Team project.</p>
+            </li>
+            <li class="project-experience-item">
+              <a class="project-link" href="" target="_blank">React Project </a>
+              <a class="project-link" href="" target="_blank"
+                >| GitHub-repository</a
+              >
+              <span> [HTML, SASS, JavaScript, Node.js, React]</span>
+              <p>text</p>
+              <p>Role: developer.</p>
+              <p>Team project.</p>
+            </li>
+          </ul>
+          <h2>Work experience</h2>
+          <h3>Territorial Manager</h3>
+          <p>NovaPay | 2019 - 2023</p>
+          <ul class="experience-list">
+            <li class="experience-item">
+              Successful management of a network of more than 100 branches
+            </li>
+            <li class="experience-item">
+              A significant increase in the loan portfolio of the branch and the
+              turnover of the sale of financial products
+            </li>
           </ul>
           <h2>Education</h2>
-          <ul>
-            <li>2022-2023 IT School GoIT Fullstack Developer</li>
-            <li></li>
-            <li></li>
+          <ul class="education-list">
+            <li class="education-item">
+              <p class="education-text">IT School GoIT</p>
+              <p>Fullstack Developer | 2022 - 2023</p>
+            </li>
+            <li class="education-item">
+              <p class="education-text">
+                Dnipro National University of Railway Transport named after
+                academician V. Lazaryan
+              </p>
+              <p class="education-desc">
+                Master Degree Accounting and Taxation | 2018 - 2020
+              </p>
+              <p class="education-desc">
+                Bachelor Degree Electrical Engineering and Electrotechnics |
+                2015 - 2018
+              </p>
+            </li>
           </ul>
           <p></p>
         </section>
