--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             width="250"
             height="250"
           />
-          <h2>Contact Me</h2>
+          <h2>Contacts</h2>
           <ul class="contact-list">
             <li class="contact-item">
               <a
@@ -134,7 +134,7 @@
             Summary..Summary..Summary..Summary..Summary..
             Summary..Summary..Summary..Summary..Summary..
           </p>
-          <h2>Project Experience</h2>
+          <h2>Projects</h2>
           <ul class="project-experience-list">
             <li class="project-experience-item">
               <a
@@ -213,6 +213,7 @@
           <h2>Work experience</h2>
           <h3>Territorial Manager</h3>
           <p>NovaPay | 2019 - 2023</p>
+          <p class="experience-desc">Achievements:</p>
           <ul class="experience-list">
             <li class="experience-item">
               Successful management of a network of more than 100 branches
