--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <li class="tech-skills-item">Responsive/Adaptive design</li>
             <li class="tech-skills-item">GIT</li>
             <li class="tech-skills-item">JavaScript</li>
-            <li class="tech-skills-item">Parcel/Node.js</li>
+            <li class="tech-skills-item">Parcel/Webpack</li>
             <li class="tech-skills-item">React</li>
           </ul>
           <h2>Soft Skills</h2>
@@ -143,13 +143,14 @@
                 target="_blank"
                 >WebStudio
               </a>
+              <span>|</span>
               <a
                 class="project-link"
                 href="https://github.com/KalinichenkoArtem/goit-markup-hw-08"
                 target="_blank"
-                ><span>|</span> GitHub-repository</a
+                >GitHub-repository</a
               >
-              <span> [HTML, SASS, JavaScript, Parcel]</span>
+              <p>[HTML, SASS, JavaScript, Parcel]</p>
               <p>
                 A website of WebStudio company. Responsive design, transform
                 effects, modal window.
@@ -164,13 +165,14 @@
                 target="_blank"
                 >IceCream
               </a>
+              <span>|</span>
               <a
                 class="project-link"
                 href="https://github.com/StaloneSerhii/ice-cream"
                 target="_blank"
-                >| GitHub-repository</a
+                >GitHub-repository</a
               >
-              <span> [HTML, SASS, JavaScript, Parcel]</span>
+              <p>[HTML, SASS, JavaScript, Parcel]</p>
               <p>
                 IceCream company website with responsive layout, burger menu,
                 modal window and attractive design.
@@ -185,27 +187,18 @@
                 target="_blank"
                 >News
               </a>
+              <span>|</span>
               <a
                 class="project-link"
                 href="https://github.com/YaroslavRebrina/js-project"
                 target="_blank"
-                >| GitHub-repository</a
+                >GitHub-repository</a
               >
-              <span> [HTML, SASS, JavaScript, Node.js]</span>
+              <p>[HTML, SASS, JavaScript, Webpack]</p>
               <p>
                 IceCream company website with responsive layout, burger menu,
                 modal window and attractive design.
               </p>
-              <p>Role: developer.</p>
-              <p>Team project.</p>
-            </li>
-            <li class="project-experience-item">
-              <a class="project-link" href="" target="_blank">React Project </a>
-              <a class="project-link" href="" target="_blank"
-                >| GitHub-repository</a
-              >
-              <span> [HTML, SASS, JavaScript, Node.js, React]</span>
-              <p>text</p>
               <p>Role: developer.</p>
               <p>Team project.</p>
             </li>
