--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <svg class="" width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-location"></use>
                 </svg>
-                Dnipro, Ukraine
+                Ukraine, Dnipro
               </a>
             </li>
           </ul>
