change bcg color

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                 IceCream company website with responsive layout, burger menu,
                 modal window and attractive design.
               </p>
-              <p>Role: developer.</p>
               <p>Team project.</p>
+              <p>Role: developer - Hero Section.</p>
             </li>
             <li class="project-experience-item">
               <a
@@ -199,8 +199,8 @@
                 IceCream company website with responsive layout, burger menu,
                 modal window and attractive design.
               </p>
-              <p>Role: developer.</p>
               <p>Team project.</p>
+              <p>Role: developer - Header + Burger menu.</p>
             </li>
           </ul>
           <h2>Work experience</h2>
