--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
                 academician V. Lazaryan
               </p>
               <p class="education-desc">
-                Master Degree Accounting and Taxation | 2018 - 2020
+                Master Degree Accounting and <br />
+                Taxation | 2018 - 2020
               </p>
               <p class="education-desc">
                 Bachelor Degree Electrical Engineering and Electrotechnics |
