--- a/index.html
+++ b/index.html
@@ -150,13 +150,12 @@
                 target="_blank"
                 >GitHub-repository</a
               >
-              <p>[HTML, SASS, JavaScript, Parcel]</p>
+              <span>[HTML, SASS, JavaScript, Parcel]</span>
               <p>
                 A website of WebStudio company. Responsive design, transform
                 effects, modal window.
               </p>
-              <p>Role: developer.</p>
-              <p>Individual project.</p>
+              <p>Individual project. Role: developer.</p>
             </li>
             <li class="project-experience-item">
               <a
@@ -172,13 +171,12 @@
                 target="_blank"
                 >GitHub-repository</a
               >
-              <p>[HTML, SASS, JavaScript, Parcel]</p>
+              <span>[HTML, SASS, JavaScript, Parcel]</span>
               <p>
                 IceCream company website with responsive layout, burger menu,
                 modal window and attractive design.
               </p>
-              <p>Team project.</p>
-              <p>Role: developer - Hero Section.</p>
+              <p>Team project. Role: developer - Hero Section.</p>
             </li>
             <li class="project-experience-item">
               <a
@@ -194,13 +192,12 @@
                 target="_blank"
                 >GitHub-repository</a
               >
-              <p>[HTML, SASS, JavaScript, Webpack]</p>
+              <span>[HTML, SASS, JavaScript, Webpack]</span>
               <p>
                 IceCream company website with responsive layout, burger menu,
                 modal window and attractive design.
               </p>
-              <p>Team project.</p>
-              <p>Role: developer - Header + Burger menu.</p>
+              <p>Team project. Role: developer - Header + Burger menu.</p>
             </li>
           </ul>
           <h2>Work experience</h2>
