--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             Summary..Summary..Summary..Summary..Summary..
             Summary..Summary..Summary..Summary..Summary..
             Summary..Summary..Summary..Summary..Summary..
-            Summary..Summary..Summary..Summary..Summary..
+            Summary..Summary..Summary..Summary..Summar
           </p>
           <h2>Projects</h2>
           <ul class="project-experience-list">
