--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
               <span>[HTML, SASS, JavaScript, Parcel]</span>
               <p>
                 A website of WebStudio company. Responsive design, transform
-                effects, modal window.
+                effects, modal window
               </p>
-              <p>Individual project. Role: developer.</p>
+              <p>Individual project. Role: developer</p>
             </li>
             <li class="project-experience-item">
               <a
@@ -174,9 +174,9 @@
               <span>[HTML, SASS, JavaScript, Parcel]</span>
               <p>
                 IceCream company website with responsive layout, burger menu,
-                modal window and attractive design.
+                modal window and attractive design
               </p>
-              <p>Team project. Role: developer - Hero Section.</p>
+              <p>Team project. Role: developer - Hero Section</p>
             </li>
             <li class="project-experience-item">
               <a
@@ -195,9 +195,9 @@
               <span>[HTML, SASS, JavaScript, Webpack]</span>
               <p>
                 IceCream company website with responsive layout, burger menu,
-                modal window and attractive design.
+                modal window and attractive design
               </p>
-              <p>Team project. Role: developer - Header + Burger menu.</p>
+              <p>Team project. Role: developer - Header + Burger menu</p>
             </li>
           </ul>
           <h2>Work experience</h2>
@@ -209,8 +209,8 @@
               Successful management of a network of more than 100 branches
             </li>
             <li class="experience-item">
-              A significant increase in the loan portfolio of the branch and the
-              turnover of the sale of financial products
+              Significant increase in the loan portfolio and sales turnover of
+              financial products of the branch
             </li>
           </ul>
           <h2>Education</h2>
