--- a/index.html
+++ b/index.html
@@ -128,11 +128,12 @@
           <p class="desc">Junior Frontend Developer</p>
           <h2>Summary</h2>
           <p class="summary-text">
-            Summary..Summary..Summary..Summary..Summary..
-            Summary..Summary..Summary..Summary..Summary..
-            Summary..Summary..Summary..Summary..Summary..
-            Summary..Summary..Summary..Summary..Summary..
-            Summary..Summary..Summary..Summary..Summar..
+            Motivated IT-developer who decided to turn his passion for computer
+            technology into a profession for the soul. Most of the tasks and
+            projects I implemented on my own, but I always enjoy working in a
+            team. I know programming languages ​​- HTML, CSS, JavaScript and
+            React. I am learning English. I have leadership qualities, order
+            with time management and believe in the success of the efforts made.
           </p>
           <h2>Projects</h2>
           <ul class="project-experience-list">
