--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <section class="right-section">
           <p class="name">ARTEM KALINICHENKO</p>
           <p class="desc">Junior Frontend Developer</p>
-          <h2>Summary</h2>
+          <h2 class="summary-title">Summary</h2>
           <p class="summary-text">
             Motivated IT-developer who decided to turn his passion for computer
             technology into a profession for the soul. Most of the tasks and
