--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 href="https://t.me/kalinichenkoas"
                 target="_blank"
               >
-                @kalinichenkoas
+                Telegram
               </a>
             </li>
             <li class="contact-item">
