--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <li class="tech-skills-item">Responsive/Adaptive design</li>
             <li class="tech-skills-item">GIT</li>
             <li class="tech-skills-item">JavaScript</li>
-            <li class="tech-skills-item">Parcel/Webpack</li>
+            <li class="tech-skills-item">Parcel/Webpack/Node.js</li>
             <li class="tech-skills-item">React</li>
           </ul>
           <h2>Soft Skills</h2>
