--- a/index.html
+++ b/index.html
@@ -175,12 +175,33 @@
                 target="_blank"
                 >GitHub-repository</a
               >
-              <span>[HTML, SASS, JavaScript, Webpack]</span>
+              <span>[JavaScript, Webpack, HTML, SASS]</span>
               <p>
                 IceCream company website with responsive layout, burger menu,
                 modal window and attractive design
               </p>
               <p>Team project. Role: developer - Header + Burger menu</p>
+            </li>
+            <li class="project-experience-item">
+              <a
+                class="project-link"
+                href="https://github.com/KalinichenkoArtem/nodejs-homework-rest-api"
+                target="_blank"
+                >Contact Collection</a
+              >
+              <span>|</span>
+              <a
+                class="project-link"
+                href="https://github.com/KalinichenkoArtem/nodejs-homework-rest-api"
+                target="_blank"
+                >GitHub-repository</a
+              >
+              <span>[Node.js, Postman, MongoDB, npm]</span>
+              <p>
+                Individual project Contact Collection written in node.js using
+                the mongoDB database and the Postman API platform
+              </p>
+              <p>Individual project. Role: developer</p>
             </li>
           </ul>
           <h2>Work experience</h2>
