--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
               <p>Individual project. Role: developer</p>
             </li>
           </ul>
-          <h2>Work experience</h2>
+          <h2 class="work-experience">Work experience</h2>
           <h3>Territorial Manager</h3>
           <p>NovaPay | 2019 - 2023</p>
           <p class="experience-desc">Achievements:</p>
